--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+
+// breytur fyrir mikið notaðar stærðir
+$max-width: 1200px;
+$gutter: 20px;
+
 /* setjum box-sizing: border-box; á allt */
 html {
   /* stylelint-disable-line */
@@ -11,6 +16,21 @@ html {
   padding: 0;
   margin: 0; }
 
+  html { /* stylelint-disable-line */
+    // til þess að texti liggi ekki upp við brún á viewport þegar
+    // við erum < 1200px breiðum skjá, setjum margin á báða kanta html
+    // ruglar líka ekki í grid overlay
+    margin-right: $gutter;
+    margin-left: $gutter;
+
+    font-family: Lato, helvetica, arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+
+    @media (min-width: $max-width) {
+      margin: 0;
+    }
+  }
 
 @import "scss/button";
 @import "scss/bullet";
