--- a/scss/input.scss
+++ b/scss/input.scss
@@ -9,14 +9,42 @@
 }
 
 .input--radio {
+  display: inline-block;
+  position: relative;
+  padding: 0 6px;
+  margin: 10px 0 0;
 
+  input[type='radio'] {
+    display: none;
+  }
 
   label {
-    margin-bottom: 0.5em;
+    font-weight: normal;
   }
-  input {
-    margin-right: 1em;
-    color: #fff;
-    
+
+  label:before {
+    content: " ";
+    display: inline-block;
+    position: relative;
+    top: 1px;
+    margin: 0 1em 0 0;
+    width: 0.9em;
+    height: 0.9em;
+    border-radius: 11px;
+    border: 1px solid #999;
+    background-color: transparent;
   }
+
+  input[type=radio]:checked + label:after {
+    border-radius: 11px;
+    width: 0.5em;
+    height: 0.5em;
+    position: absolute;
+    top: 7.5px;
+    left: 9.5px;
+    content: " ";
+    display: block;
+    background: #999;
+  }
+
 }
