--- a/styles.css
+++ b/styles.css
@@ -99,9 +99,33 @@ html {
     -ms-border-radius: 3px;
     border-radius: 3px; }
 
-.input--radio label {
-  margin-bottom: 0.5em; }
-
-.input--radio input {
-  margin-right: 1em;
-  color: #fff; }
+.input--radio {
+  display: inline-block;
+  position: relative;
+  padding: 0 6px;
+  margin: 10px 0 0; }
+  .input--radio input[type='radio'] {
+    display: none; }
+  .input--radio label {
+    font-weight: normal; }
+  .input--radio label:before {
+    content: " ";
+    display: inline-block;
+    position: relative;
+    top: 1px;
+    margin: 0 1em 0 0;
+    width: 0.9em;
+    height: 0.9em;
+    border-radius: 11px;
+    border: 1px solid #999;
+    background-color: transparent; }
+  .input--radio input[type=radio]:checked + label:after {
+    border-radius: 11px;
+    width: 0.5em;
+    height: 0.5em;
+    position: absolute;
+    top: 7.5px;
+    left: 9.5px;
+    content: " ";
+    display: block;
+    background: #999; }
