--- a/scss/button.scss
+++ b/scss/button.scss
@@ -14,6 +14,7 @@
 .button--medium {
   padding: 0.8em 1em 0.8em 1em;
   margin: 0 auto 5em auto ;
+}
 
 .button--wide {
   padding: 0.5em 2em 0.5em 2em;
