--- a/styles.scss
+++ b/styles.scss
@@ -28,8 +28,8 @@ html { /* stylelint-disable-line */
   // til þess að texti liggi ekki upp við brún á viewport þegar
   // við erum < 1200px breiðum skjá, setjum margin á báða kanta html
   // ruglar líka ekki í grid overlay
-  margin-right: $gutter;
-  margin-left: $gutter;
+  margin-right: 0;
+  margin-left: 0;
 
   font-family: Lato, helvetica, arial, sans-serif;
   font-size: 16px;
@@ -40,6 +40,10 @@ html { /* stylelint-disable-line */
   }
 }
 
+body {
+  margin: 0;
+}
+
 @import "scss/button";
 @import "scss/bullet";
 @import "scss/grid";
@@ -48,3 +52,4 @@ html { /* stylelint-disable-line */
 @import "scss/review";
 @import "scss/text";
 @import "scss/input";
+@import "scss/footer";
