--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,17 @@ body {
     .col-sm-12 {
       width: 100%; } }
 
+.header {
+  background: transparent url(img/bg-subpage.jpg) no-repeat fixed 50% 50%;
+  background-size: cover;
+  text-align: left;
+  height: 15em;
+  display: flex; }
+  .header h1 {
+    color: white;
+    border: 0;
+    margin: auto auto auto 0.2em; }
+
 .navbar {
   overflow: hidden;
   background: rgba(0, 0, 0, 0.8);
