--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -18,6 +18,10 @@
   padding-right: $gutter / 2;
   padding-left: $gutter / 2;
 
+  & > img {
+    width: 100%;
+  }
+
   @media (max-width: 599px) {
     margin-bottom: $gutter;
 
