--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+// TODO taka út
+.review img { width: 50%; }
+
 // breytur fyrir mikið notaðar stærðir
 $max-width: 1200px;
 $gutter: 20px;
@@ -24,13 +27,26 @@ html { /* stylelint-disable-line */
   margin-right: $gutter;
   margin-left: $gutter;
 
-  font-family: Lato, helvetica, arial, sans-serif;
+  font-family: 'Open Sans', helvetica, arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
 
   @media (min-width: $max-width) {
     margin: 0;
   }
+}
+
+main, footer { /* stylelint-disable-line */
+  max-width: $max-width;
+  margin: 0 auto;
+
+  // þar sem við erum að eiga við neikvæð margin á grid, setjum overflow-x
+  // hér sem hidden, þá fáum við ekki lárétta skrunstiku
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
 }
 
 @import "scss/button";
@@ -40,3 +56,5 @@ html { /* stylelint-disable-line */
 @import "scss/heading";
 @import "scss/review";
 @import "scss/text";
+@import "scss/nav";
+@import "scss/hero"
