--- a/scss/button.scss
+++ b/scss/button.scss
@@ -19,16 +19,25 @@
 
   cursor: pointer;
 
-  background-color: #666;
+  background-color: #777;
 
-  border: 1px solid #666;
-  border-radius: 4px;
+  border: 1px solid #777;
+  @include border-radius(4px);
 
   transition: background-color 500ms ease;
 
   &--small {
     padding: 4px 8px;
     display: inline;
+  }
+
+  &--wide {
+    padding: 15px 80px;
+    font-size: 24px
+  }
+
+  &--order-page {
+    text-align: center;
   }
 
   &:hover {
