--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,8 +1,13 @@
 footer {
   background-color: #333;
   color: #fff;
+  bottom: 0;
+  width: 100%;
+  background: cover;
 
   .copyright {
     text-align: center;
+    padding-bottom: 1.5rem;
+    color: #aaa;
   }
 }
