--- a/styles.scss
+++ b/styles.scss
@@ -43,7 +43,7 @@ html { /* stylelint-disable-line */
   }
 }
 
-main, footer { /* stylelint-disable-line */
+main { /* stylelint-disable-line */
   max-width: $max-width;
   margin: 0 auto;
 
@@ -58,6 +58,12 @@ a {
 
 body {
   margin: 0;
+}
+
+.section--center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @import "scss/button";
