--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,3 +1,11 @@
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+          border-radius: $radius;
+}
+
+
 .button {
   display: inline-block;
 
@@ -37,7 +45,7 @@
   }
 
   &--order-page {
-    text-align: center;
+    margin: auto;
   }
 
   &:hover {
