--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -14,6 +14,10 @@
   width: ($col / 12 * 100) * 1%;
 }
 
+@mixin offset($off: 1) {
+  margin-left: ($off / 12 * 100) * 1%;
+}
+
 .col {
   padding-right: $gutter / 2;
   padding-left: $gutter / 2;
@@ -132,5 +136,51 @@
 }
 
 .offset {
-  // todo útfæra offset
+  &-1 {
+    @include offset(1);
+  }
+
+  &-2 {
+    @include offset(2);
+  }
+
+  &-3 {
+    @include offset(3);
+  }
+
+  &-4 {
+    @include offset(4);
+  }
+
+  &-5 {
+    @include offset(5);
+  }
+
+  &-6 {
+    @include offset(6);
+  }
+
+  &-7 {
+    @include offset(7);
+  }
+
+  &-8 {
+    @include offset(8);
+  }
+
+  &-9 {
+    @include offset(9);
+  }
+
+  &-10 {
+    @include offset(10);
+  }
+
+  &-11 {
+    @include offset(11);
+  }
+
+  &-12 {
+    @include offset(12);
+  }
 }
