--- a/scss/heading.scss
+++ b/scss/heading.scss
@@ -13,6 +13,15 @@
     font-size: 3rem;
   }
 
+  &--center {
+    margin: auto;
+  }
+
+  &--text {
+    border: 0;
+  }
+}
+
 // .header {
 //   background: transparent url(img/bg-subpage.jpg) no-repeat fixed 50% 50%;
 //   background-size: cover;
@@ -40,4 +49,3 @@
 //     flex-direction: row;
 //     justify-content: space-between;
 //   }
-}
