Lagaði hero, footer, fonta og bil

--- a/scss/bullet.scss
+++ b/scss/bullet.scss
@@ -14,8 +14,13 @@
       margin-right: 0.5rem;
     }
 
+    &__text {
+      font-size: 1.125rem;
+    }
+
     &__heading {
       font-family: 'Roboto Slab', sans-serif;
+      font-size: 1.5rem;
     }
   }
 }
