--- a/scss/button.scss
+++ b/scss/button.scss
@@ -5,7 +5,6 @@
           border-radius: $radius;
 }
 
-
 .button {
   display: inline-block;
 
@@ -30,7 +29,7 @@
   background-color: #777;
 
   border: 1px solid #777;
-  @include border-radius(4px);
+  @include border-radius(3px);
 
   transition: background-color 500ms ease;
 
@@ -43,6 +42,13 @@
     padding: 15px 80px;
     font-size: 24px;
     margin: auto;
+  }
+
+  &--medium {
+    padding: 0.65rem 1.1rem;
+    margin: 0;
+    width: auto;
+    font-size: 2.25rem;
   }
 
   &--order-page {
@@ -70,30 +76,4 @@
     background-color: #eee;
     border-color: #eee;
   }
-
-//   @include border-radius(4px);
-//   background-color: #555;
-//   color: white;
-//   border: 1px solid transparent;
-//   text-decoration: none;
-// }
-//
-// .button--small {
-//   padding: 0.8em 1em 0.8em 1em;
-//   margin: 0 auto 5em auto ;
-// }
-//
-// .button--medium {
-//   padding: 0.8em 1em 0.8em 1em;
-//   margin: 0 auto 5em auto ;
-// }
-//
-// .button--wide {
-//   padding: 0.5em 2em 0.5em 2em;
-//   margin: 0 auto 5em auto ;
-// }
-//
-// .button--order-page {
-//   padding: 0.8em 8em 0.8em 8em;
-//   margin: 0 auto 5em auto ;
 }
