--- a/scss/form.scss
+++ b/scss/form.scss
@@ -1,6 +1,16 @@
 form {
-  .heading--three {
-    font-size: 21px;
+  fieldset {
+    border: none;
+  }
+
+  legend {
+    font-size: 1.3125rem;
     padding-bottom: 1rem;
+    font-family: 'Roboto Slab';
+  }
+
+  select {
+    display: block;
+    width: 100%;
   }
 }
