--- a/scss/review.scss
+++ b/scss/review.scss
@@ -1,5 +1,5 @@
 .reviews {
-  padding-top: 10*$gutter;
+  padding-top: 7*$gutter;
   padding-bottom: 5*$gutter;
   display: flex;
 
@@ -16,11 +16,11 @@
     }
 
     &__quote {
-      align-self: center;
+      text-align: center;
       flex-wrap: wrap;
       font-style: italic;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 1.375rem;
     }
 
     &__name {
