--- a/styles.scss
+++ b/styles.scss
@@ -46,7 +46,7 @@ main { /* stylelint-disable-line */
 
   // þar sem við erum að eiga við neikvæð margin á grid, setjum overflow-x
   // hér sem hidden, þá fáum við ekki lárétta skrunstiku
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 a {
