--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -31,5 +31,11 @@ nav {
           color: #ffffff;
       }
     }
+
+    li:last-child {
+      @media (max-width: $small-max-width) {
+        display: none;
+      }
+    }
   }
 }
