--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,12 +1,5 @@
-@mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-     -moz-border-radius: $radius;
-      -ms-border-radius: $radius;
-          border-radius: $radius;
-}
-
 .button {
-  display: inline-block;
+  display: block;
 
   width: 100%;
   max-width: 256px;
@@ -29,7 +22,7 @@
   background-color: #777;
 
   border: 1px solid #777;
-  @include border-radius(3px);
+  border-radius: 3px;
 
   transition: background-color 500ms ease;
 
@@ -39,8 +32,8 @@
   }
 
   &--wide {
-    padding: 15px 80px;
-    font-size: 24px;
+    padding: 0.5rem 0;
+    font-size: 2.25rem;
     margin: auto;
   }
 
@@ -49,6 +42,14 @@
     margin: 0;
     width: auto;
     font-size: 2.25rem;
+
+    @media (max-width: $small-max-width) {
+      font-size: 1.5rem;
+    }
+  }
+
+  &--centered {
+    margin: 0 auto;
   }
 
   &--order-page {
