--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -26,7 +26,7 @@
     width: 100%;
   }
 
-  @media (max-width: 599px) {
+  @media (max-width: $medium-max-width) {
     margin-bottom: $gutter;
 
     &:last-child {
@@ -83,7 +83,7 @@
   }
 
   &-md {
-    @media (max-width: 599px) {
+    @media (max-width: $medium-max-width) {
       &-1 {
         @include columns(1);
       }
@@ -135,7 +135,7 @@
   }
 
   &-sm {
-    @media (max-width: 399px) {
+    @media (max-width: $small-max-width) {
       &-1 {
         @include columns(1);
       }
@@ -188,6 +188,10 @@
 }
 
 .offset {
+  &-0 {
+    @include offset(0);
+  }
+
   &-1 {
     @include offset(1);
   }
@@ -234,5 +238,117 @@
 
   &-12 {
     @include offset(12);
+  }
+
+  &-md {
+    @media (max-width: $medium-max-width) {
+      &-0 {
+        @include offset(0);
+      }
+
+      &-1 {
+        @include offset(1);
+      }
+
+      &-2 {
+        @include offset(2);
+      }
+
+      &-3 {
+        @include offset(3);
+      }
+
+      &-4 {
+        @include offset(4);
+      }
+
+      &-5 {
+        @include offset(5);
+      }
+
+      &-6 {
+        @include offset(6);
+      }
+
+      &-7 {
+        @include offset(7);
+      }
+
+      &-8 {
+        @include offset(8);
+      }
+
+      &-9 {
+        @include offset(9);
+      }
+
+      &-10 {
+        @include offset(10);
+      }
+
+      &-11 {
+        @include offset(11);
+      }
+
+      &-12 {
+        @include offset(12);
+      }
+    }
+  }
+
+  &-sm {
+    @media (max-width: $small-max-width) {
+      &-0 {
+        @include offset(0);
+      }
+
+      &-1 {
+        @include offset(1);
+      }
+
+      &-2 {
+        @include offset(2);
+      }
+
+      &-3 {
+        @include offset(3);
+      }
+
+      &-4 {
+        @include offset(4);
+      }
+
+      &-5 {
+        @include offset(5);
+      }
+
+      &-6 {
+        @include offset(6);
+      }
+
+      &-7 {
+        @include offset(7);
+      }
+
+      &-8 {
+        @include offset(8);
+      }
+
+      &-9 {
+        @include offset(9);
+      }
+
+      &-10 {
+        @include offset(10);
+      }
+
+      &-11 {
+        @include offset(11);
+      }
+
+      &-12 {
+        @include offset(12);
+      }
+    }
   }
 }
