--- a/scss/input.scss
+++ b/scss/input.scss
@@ -2,16 +2,14 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 1em;
+
   input {
     border: 1px solid #aaa;
-    @include border-radius(3px);
+    border-radius: 3px;
   }
 
-  &--text {
-
-    input {
-      padding: 0.3em 0 0.3em 0.2em;
-    }
+  &--text input {
+    padding: 0.3em 0 0.3em 0.2em;
   }
 
   &--radioset {
@@ -19,43 +17,18 @@
   }
 
   &--radio {
-    display: block;
-    position: relative;
+    flex-direction: row;
+    align-items: center;
     padding: 0 6px;
     margin: 10px 0 0;
 
-    input[type='radio'] {
-      display: none;
-    }
-
     label {
-      font-weight: normal;
+      margin-left: 1rem;
     }
+  }
 
-    label:before {
-      content: " ";
-      display: inline-block;
-      position: relative;
-      top: 1px;
-      margin: 0 1em 0 0;
-      width: 0.9em;
-      height: 0.9em;
-      border-radius: 11px;
-      border: 1px solid #999;
-      background-color: transparent;
-    }
-
-    input[type=radio]:checked + label:after {
-      border-radius: 11px;
-      width: 0.5em;
-      height: 0.5em;
-      position: absolute;
-      top: 7.5px;
-      left: 9.5px;
-      content: " ";
-      display: block;
-      background: #999;
-    }
+  label {
+    font-weight: normal;
   }
 
   &--select {
