--- a/scss/button.scss
+++ b/scss/button.scss
@@ -35,6 +35,10 @@
     padding: 0.5rem 0;
     font-size: 2.25rem;
     margin: auto;
+
+    @media (max-width: $small-max-width) {
+      font-size: 1.5rem;
+    }
   }
 
   &--medium {
