--- a/scss/button.scss
+++ b/scss/button.scss
@@ -46,6 +46,7 @@
     margin: 0;
     width: auto;
     font-size: 2.25rem;
+    animation: 4s fadeb ease-in;
 
     @media (max-width: $small-max-width) {
       font-size: 1.5rem;
