--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -22,6 +22,7 @@
 
     .heading--one {
       margin-bottom: 4rem;
+      animation: 4s fade1 ease-in;
 
       @media (max-width: $small-max-width) {
         font-size: 3rem;
@@ -31,6 +32,7 @@
     .heading--two {
       font-size: 2.25rem;
       font-weight: normal;
+      animation: 4s fade2 ease-in;
 
       @media (max-width: $small-max-width) {
         font-size: 1.5rem;
