--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,3 +1,11 @@
+@keyframes fadeb {
+  from { opacity: 0; }
+  25% { opacity: 0; }
+  50% { opacity: 0; }
+  75% { opacity: 0; }
+  to { opacity: 1; }
+}
+
 .button {
   display: block;
 
