--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -1,3 +1,19 @@
+@keyframes fade1 {
+  from { opacity: 0; }
+  25% { opacity: 0; }
+  50% { opacity: 0; }
+  75% { opacity: 1; }
+  to { opacity: 1; }
+}
+
+@keyframes fade2 {
+  from { opacity: 0; }
+  25% { opacity: 0; }
+  50% { opacity: 1; }
+  75% { opacity: 1; }
+  to { opacity: 1; }
+}
+
 .hero {
   height: 30*$gutter;
   display: flex;
