--- a/scss/button.scss
+++ b/scss/button.scss
@@ -28,7 +28,7 @@
 
   &--small {
     padding: 4px 8px;
-    display: inline;
+    width: auto;
   }
 
   &--wide {
@@ -63,22 +63,5 @@
   &:hover {
     color: #eee;
     background-color: #333;
-  }
-
-  &--inverted {
-    color: #666;
-    background-color: #eee;
-  }
-
-  &--inverted:hover {
-    color: #333;
-    background-color: #ccc;
-  }
-
-  &--disabled,
-  &--disabled:hover {
-    color: #999;
-    background-color: #eee;
-    border-color: #eee;
   }
 }
