--- a/scss/input.scss
+++ b/scss/input.scss
@@ -1,15 +1,14 @@
 .input {
   display: flex;
-  flex-direction: column;
+
   margin-bottom: 1em;
 
-  input {
+  flex-direction: column;
+
+  &--text {
+    padding: 0.3em 0 0.3em 0.2em;
     border: 1px solid #aaa;
     border-radius: 3px;
-  }
-
-  &--text input {
-    padding: 0.3em 0 0.3em 0.2em;
   }
 
   &--radioset {
@@ -17,17 +16,18 @@
   }
 
   &--radio {
+    padding: 0 6px;
+    margin: 0.5*$gutter 0 0;
+
     flex-direction: row;
     align-items: center;
-    padding: 0 6px;
-    margin: 10px 0 0;
 
-    label {
+    .label {
       margin-left: 1rem;
     }
   }
 
-  label {
+  .label {
     font-weight: normal;
   }
 
@@ -36,10 +36,12 @@
     flex-direction: row;
     justify-content: space-between;
 
-    .select-time {
-      width: 30%;
+    > * {
+      margin-right: 2*$gutter;
+    }
+
+    > *:last-child {
+      margin-right: 0;
     }
   }
-
-
 }
