--- a/scss/button.scss
+++ b/scss/button.scss
@@ -1,11 +1,3 @@
-@keyframes fadeb {
-  from { opacity: 0; }
-  25% { opacity: 0; }
-  50% { opacity: 0; }
-  75% { opacity: 0; }
-  to { opacity: 1; }
-}
-
 .button {
   display: block;
 
@@ -17,7 +9,7 @@
 
   overflow: hidden;
 
-  font-family: 'Open Sans', helvetica, arial, sans-serif;
+  font-family: "Open Sans", helvetica, arial, sans-serif;
   font-size: 1rem;
   color: #eee;
   text-align: center;
@@ -35,14 +27,14 @@
   transition: background-color 500ms ease;
 
   &--small {
-    padding: 4px 8px;
     width: auto;
+    padding: 4px 8px;
   }
 
   &--wide {
     padding: 0.5rem 0;
-    font-size: 2.25rem;
     margin: auto;
+    font-size: 2.25rem;
 
     @media (max-width: $small-max-width) {
       font-size: 1.5rem;
@@ -50,11 +42,10 @@
   }
 
   &--medium {
+    width: auto;
     padding: 0.65rem 1.1rem;
     margin: 0;
-    width: auto;
     font-size: 2.25rem;
-    animation: 4s fadeb ease-in;
 
     @media (max-width: $small-max-width) {
       font-size: 1.5rem;
