--- a/scss/heading.scss
+++ b/scss/heading.scss
@@ -1,6 +1,6 @@
 .heading {
-  font-family: 'Roboto Slab', sans-serif;
   overflow-wrap: break-word;
+  font-family: "Roboto Slab", sans-serif;
 
   &--one {
     font-size: 4.5rem;
@@ -11,8 +11,8 @@
   }
 
   &--three {
-    font-size: 1.5rem;
     margin-bottom: 1.5rem;
+    font-size: 1.5rem;
   }
 
   &--centered {
